--- a/Home.css
+++ b/Home.css
@@ -96,13 +96,14 @@ menu #search_items:active{
     background-position: center;
     vertical-align: middle;
     display: block;
+    width: 100%;
     background-color: rgb(249, 249, 248);
     background-position: center;
     padding: 40px 0px 0px 0px;
     font-size: 40px;
     background-size: 100%;
     font-weight: bold;
-    color: rgb(20, 0, 0);
+    color: grey;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     height: 300px;
     margin: auto;
