--- a/Home.css
+++ b/Home.css
@@ -92,7 +92,7 @@ menu #search_items:active{
 }
 
 .header_write{
-    background-image: url("images/hostess-4.jpg");
+    background-image: url("images/pilot-2.jpg");
     background-position: center;
     vertical-align: middle;
     display: block;
